--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "eslint": "^8.52.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
@@ -45,5 +49,11 @@
   "resolutions": {
     "react-refresh": "~0.14.0"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": [
+      "universe/native",
+      "universe/web"
+    ]
+  }
 }
